--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,14 @@
 	<build>
 		<finalName>BankZbozowyApp</finalName>
 		<plugins>
-    	<plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webXml>src\main\webapp\WEB_INF\web.xml</webXml>
+                </configuration>
+            </plugin>
+    		<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.4.7.v20170914</version>
@@ -24,11 +31,11 @@
 				<contextPath>/</contextPath>
 				<scanIntervalSeconds>10</scanIntervalSeconds>
 				<httpConnector>
-       	<port>9091</port>
-       	</httpConnector>
-       	</configuration>
-    	</plugin>
-   	</plugins>
+				<port>9091</port>
+				</httpConnector>
+				</configuration>
+    		</plugin>
+   		</plugins>
 	</build>
 
 	<properties>
